fix mobile nav spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -116,7 +116,7 @@ nav ul {
 nav li {
 	list-style-type: none;
 	display: inline-block;
-	margin: 0 20px 0 0;
+	margin-right: 20px;
 	text-transform: uppercase;
 }
 
@@ -349,7 +349,7 @@ footer a:hover {
 
 	nav li {
 	text-align: left;
-	margin-left: 0;
+	margin: 0;
 	padding-left: 20px;
 }
 
